--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,6 +3,17 @@
 @tailwind components;
 @tailwind utilities;
 
+.overlay-f {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(0deg, rgb(0 0 0 / 72%) 11%, transparent);
+    width: 100%;
+    min-height: max-content;
+    transition: .5s ease;
+}
+
 /*#app {*/
 /*  max-width: 1280px;*/
 /*  margin: 0 auto;*/
