--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,9 +8,9 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: linear-gradient(0deg, rgb(0 0 0 / 72%) 11%, transparent);
+    background: linear-gradient(0deg, transparent, rgb(0 0 0 / 72%) 120%);
     width: 100%;
-    min-height: max-content;
+    min-height: 2rem;
     transition: .5s ease;
 }
 
